design: 디자인 관련 사용성 강화
- 디자이너님 검사를 받아야 합니다
- light 폰트 제거
- #767676보다 낮은 글자 색상은 웹 접근성에 저해됨

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,10 @@
   /* blccu design token (color) */
   :root {
     --blccu-white: 255 255 255; /* #ffffff */
+    --blccu-neutral-100: 250 250 250; /* #fafafa */
     --blccu-neutral-200: 234 234 234; /* #eaeaea */
     --blccu-neutral-400: 166 166 166; /* #a6a6a6 */
+    --blccu-neutral-500: 118 118 118; /* #767676 */
     --blccu-neutral-600: 91 91 91; /* #5b5b5b */
     --blccu-neutral-800: 26 26 26; /* #1a1a1a */
     --blccu-black: 0 0 0; /* #000000 */
